# ObsAvoidance

./: README.md  config.yaml
install/: local_setup.sh  local_setup.zsh  setup.sh  setup.zsh
install/interface/include/interface/action/: cdcr.hpp  move.h  move.hpp
install/interface/include/interface/msg/: slam.h
install/interface/include/interface/srv/: cam_pose.h  enable_follow.hpp
install/interface/share/interface/: package.sh  package.zsh
install/interface/share/interface/action/: Cdcr.idl  Move.action
install/interface/share/interface/cmake/: interface__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake
install/interface/share/interface/msg/: Slam.idl  Slam.msg
install/interface/share/interface/srv/: BaseJointMotorValue.idl  CamPose.idl  EnableFollow.idl  MapPoint.srv  MapPoint_Response.msg  PathPoints.idl  PathPoints_Request.msg  SlamInitialized.idl  SlamInitialized.srv  SlamInitialized_Response.msg  T.idl  T_Request.msg  Transform.idl  Transform_Response.msg
install/media/lib/media/: media
install/media/share/media/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/model/share/model/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/model/share/model/cmake/: modelConfig.cmake
install/model3/share/model3/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/orbslam/lib/orbslam/: orbslam
install/orbslam/share/orbslam/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/orbslam/share/orbslam/launch/: slam.launch.py
install/path_follow/share/path_follow/: local_setup.sh  package.sh
install/path_planner/lib/path_planner/: path_planner
install/path_planner/share/path_planner/: package.sh
install/slam/lib/slam/: slam
install/slam/share/slam/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/slam/share/slam/cmake/: slamConfig.cmake
install/slam/share/slam/launch/: slam.launch.py
interface/: CMakeLists.txt
interface/install/: local_setup.sh  setup.sh
interface/install/interface/share/interface/: package.sh
interface/log/: latest_build
log/: latest_build  latest_list
map/: CMakeLists.txt  package.xml
media/: CMakeLists.txt
media/src/: main.cpp  media.hpp
model/: Description.txt
model/src/: main.cpp  main_copy.cpp
model2/: CMakeLists.txt  package.xml
model2/src/: main.cpp
model3/: README.TXT
orbslam/: CMakeLists.txt
orbslam/CMakeModules/: FindORB_SLAM3.cmake
orbslam/launch/: slam.launch.py
orbslam/src/: main.cpp  slam.hpp
pointcloud_test/: CMakeLists.txt  package.xml
pointcloud_test/src/: main.cpp  test.cpp
slam/data/: small.yaml
slam/src/: slam.hpp
src/: README.md  cdcr_config.yaml  config.yaml  rviz_default.rviz
src/cdcr_controller/: CMakeLists.txt  package.xml
src/cdcr_controller/src/: cdcr.cpp  cdcr.hpp  cdcr_controller.hpp  cdcr_joint.cpp  cdcr_joint.hpp  cdcr_model.cpp  cdcr_model.hpp  main.cpp
src/interface/: CMakeLists.txt
src/interface/msg/: Slam.msg
src/interface/srv/: BaseJointMotorValue.srv  CamPose.srv  PathPoints.srv  Transform.srv
src/media/: CMakeLists.txt
src/media/src/: main.cpp  media.cpp  media.hpp
src/model/: CMakeLists.txt  package.xml
src/model/src/: main.cpp  model.cpp  model.hpp
src/model3/: CMakeLists.txt
src/motion_control/: CMakeLists.txt  motion_control.yaml  package.xml
src/motion_control/src/: main.cpp  motion_control.cpp  motion_control.hpp
src/orbslam/launch/: slam.launch.py
src/orbslam/src/: main.cpp  slam.cpp  slam.hpp
src/path_follow/: CMakeLists.txt  README.md  config.yaml  package.xml  path_follow_config.yaml
src/path_follow/src/: joint.cpp  joint.hpp  main.cpp  path_follow.cpp  path_follow.hpp  uniform_bspline.cpp
src/path_planner/: CMakeLists.txt  config.yaml  package.xml  path_planner_config.yaml
src/path_planner/src/: main.cpp  planner.cpp  planner.hpp  polynomial_traj.cpp  polynomial_traj.hpp
src/slam/: CMakeLists.txt
src/slam/launch/: slam.launch.py
src/slam/src/: slam.cpp
(+108 files in other folders)
